[package]
name = "PaymentCore"
version = "0.1.0"
authors = ["Jamwesayer <jamesb@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "payment_core"
path = "src/lib.rs"

[dependencies]
bitcoincore-rpc = "0.13.0"
bitcoincore-rpc-json = "0.13.0"
chrono = "0.4.0"

diesel = { version = "1.4.4", features = ["mysql", "chrono"] }
dotenv = "0.15.0"
